feat: add an offline local profile
